Removing junk from the ROOT analysis notebook

--- a/analysis/process_root_trees.ipynb
+++ b/analysis/process_root_trees.ipynb
@@ -75,9 +75,8 @@
    "outputs": [],
    "source": [
     "# Get the file names of the Geant4 sim output trees\n",
-    "input_files = (glob.glob('../output/icesim_*.root'))\n",
-    "input_files.sort(key=natural_keys)\n",
-    "input_files = input_files"
+    "input_files = glob.glob('../output/icesim_*.root')\n",
+    "input_files.sort(key=natural_keys)"
    ]
   },
   {
